--- a/Split_It/App.xaml
+++ b/Split_It/App.xaml
@@ -1,12 +1,13 @@
 ﻿<Application
-    x:Class="Split_It_.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:app="clr-namespace:Split_It_.Converter"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:Primitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone"
+    x:Class="Split_It_.App"
+    >
 
     <!--Application Resources-->
     <Application.Resources>
@@ -22,38 +23,38 @@
 
         <!--App templates-->
         <DataTemplate x:Key="expensesTemplate">
-            <Border BorderThickness="0,0,0,2" BorderBrush="{StaticResource splitwiseGreyBG}">
-                <Grid Margin="5,20,5,20" toolkit:TiltEffect.IsTiltEnabled="True">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" VerticalAlignment="Center" Width="45" Height="65" Margin="0,0,8,0"/>
+        	<Border BorderThickness="0,0,0,2" BorderBrush="{StaticResource splitwiseGreyBG}">
+        		<Grid Margin="5,20,5,20" toolkit:TiltEffect.IsTiltEnabled="True">
+        			<Grid.ColumnDefinitions>
+        				<ColumnDefinition Width="Auto"/>
+        				<ColumnDefinition Width="*"/>
+        				<ColumnDefinition Width="Auto"/>
+        			</Grid.ColumnDefinitions>
+        			<Image Grid.Column="0" Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" VerticalAlignment="Center" Width="45" Height="65" Margin="0,0,8,0"/>
 
-                    <Grid Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
+        			<Grid Grid.Column="1">
+        				<Grid.RowDefinitions>
+        					<RowDefinition Height="*"/>
+        					<RowDefinition Height="Auto"/>
+        				</Grid.RowDefinitions>
 
-                        <TextBlock x:Name="tbTitle" TextTrimming="WordEllipsis" Text="{Binding Converter={StaticResource ExpenseTitleConverter}}" Foreground="Black" Grid.Row="0" FontSize="{StaticResource expenseTitleSize}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                        <TextBlock x:Name="tbWhoPaid" Foreground="{StaticResource settled}" Text="{Binding Converter={StaticResource ExpenseShareWhoPaidConverter}}" Grid.Row="1" FontSize="{StaticResource descriptionSize}" Visibility="{Binding payment, Converter={StaticResource BoolVisibilityConverter}}"/>
+        				<TextBlock x:Name="tbTitle" TextTrimming="WordEllipsis" Text="{Binding Converter={StaticResource ExpenseTitleConverter}}" Foreground="Black" Grid.Row="0" FontSize="{StaticResource expenseTitleSize}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        				<TextBlock x:Name="tbWhoPaid" Foreground="{StaticResource settled}" Text="{Binding Converter={StaticResource ExpenseShareWhoPaidConverter}}" Grid.Row="1" FontSize="{StaticResource descriptionSize}" Visibility="{Binding payment, Converter={StaticResource BoolVisibilityConverter}}"/>
 
-                    </Grid>
+        			</Grid>
 
-                    <Grid Grid.Column="2">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
+        			<Grid Grid.Column="2">
+        				<Grid.RowDefinitions>
+        					<RowDefinition Height="*"/>
+        					<RowDefinition Height="Auto"/>
+        				</Grid.RowDefinitions>
 
-                        <TextBlock x:Name="tbDescription" Text="{Binding users, Converter={StaticResource ExpenseShareDescriptionConverter}}" Foreground="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Grid.Row="0" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding payment, Converter={StaticResource BoolVisibilityConverter}}"/>
-                        <TextBlock Foreground="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Text="{Binding Converter={StaticResource ExpenseShareAmountConverter}}" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Right" Visibility="{Binding payment, Converter={StaticResource BoolVisibilityConverter}}"/>
+        				<TextBlock x:Name="tbDescription" Text="{Binding users, Converter={StaticResource ExpenseShareDescriptionConverter}}" Foreground="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Grid.Row="0" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding payment, Converter={StaticResource BoolVisibilityConverter}}"/>
+        				<TextBlock Foreground="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Text="{Binding Converter={StaticResource ExpenseShareAmountConverter}}" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Right" Visibility="{Binding payment, Converter={StaticResource BoolVisibilityConverter}}"/>
 
-                    </Grid>
-                </Grid>
-            </Border>
+        			</Grid>
+        		</Grid>
+        	</Border>
         </DataTemplate>
 
 
@@ -81,16 +82,71 @@
         <!--Page Animations-->
         <Style x:Key="TransitionPageStyle" TargetType="phone:PhoneApplicationPage">
             
-            <Setter Property="toolkit:TransitionService.NavigationOutTransition">
-                <Setter.Value>
-                    <toolkit:NavigationOutTransition>
-                        <toolkit:NavigationOutTransition.Backward>
-                            <toolkit:TurnstileTransition Mode="BackwardOut"/>
-                        </toolkit:NavigationOutTransition.Backward>
-                    </toolkit:NavigationOutTransition>
-                </Setter.Value>
-            </Setter>
+        	<Setter Property="toolkit:TransitionService.NavigationOutTransition">
+        		<Setter.Value>
+        			<toolkit:NavigationOutTransition>
+        				<toolkit:NavigationOutTransition.Backward>
+        					<toolkit:TurnstileTransition Mode="BackwardOut"/>
+        				</toolkit:NavigationOutTransition.Backward>
+        			</toolkit:NavigationOutTransition>
+        		</Setter.Value>
+        	</Setter>
         </Style>
+        
+    	<Style TargetType="phone:Pivot">
+    		<Setter Property="Margin" Value="0"/>
+    		<Setter Property="Padding" Value="0"/>
+    		<Setter Property="Foreground" Value="White"/>
+    		<Setter Property="Background" Value="Transparent"/>
+    		<Setter Property="ItemsPanel">
+    			<Setter.Value>
+    				<ItemsPanelTemplate>
+    					<Grid/>
+    				</ItemsPanelTemplate>
+    			</Setter.Value>
+    		</Setter>
+    		<Setter Property="Template">
+    			<Setter.Value>
+    				<ControlTemplate TargetType="phone:Pivot">
+    					<Grid HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}">
+    						<Grid.RowDefinitions>
+    							<RowDefinition Height="Auto"/>
+    							<RowDefinition Height="Auto"/>
+    							<RowDefinition Height="*"/>
+    						</Grid.RowDefinitions>
+    						<Grid Background="{StaticResource splitwiseGreen}" Grid.RowSpan="2"/>
+                            <Grid Grid.Row="2" Background="White"/>
+    						<ContentControl ContentTemplate="{TemplateBinding TitleTemplate}" Content="{TemplateBinding Title}" HorizontalAlignment="Left" Margin="24,17,0,-7" Style="{StaticResource PivotTitleStyle}"/>
+    						<Primitives:PivotHeadersControl x:Name="HeadersListElement" Grid.Row="1"/>
+    						<ItemsPresenter x:Name="PivotItemPresenter" Margin="{TemplateBinding Padding}" Grid.Row="2"/>
+    					</Grid>
+    				</ControlTemplate>
+    			</Setter.Value>
+    		</Setter>
+    	</Style>
+    	<Style TargetType="phone:PivotItem">
+    		<Setter Property="Background" Value="Transparent"/>
+    		<Setter Property="Margin" Value="{StaticResource PivotItemMargin}"/>
+    		<Setter Property="Padding" Value="0"/>
+    		<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+    		<Setter Property="VerticalContentAlignment" Value="Stretch"/>
+    		<Setter Property="Template">
+    			<Setter.Value>
+    				<ControlTemplate TargetType="phone:PivotItem">
+    					<Grid HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}" Background="White">
+    						<VisualStateManager.VisualStateGroups>
+    							<VisualStateGroup x:Name="Pivot">
+    								<VisualState x:Name="Right"/>
+    								<VisualState x:Name="Left"/>
+    								<VisualState x:Name="Center"/>
+    							</VisualStateGroup>
+    						</VisualStateManager.VisualStateGroups>
+    						<ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+    					</Grid>
+    				</ControlTemplate>
+    			</Setter.Value>
+    		</Setter>
+    	</Style>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
