order by expense date and not created date

--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -85,6 +85,10 @@
                     </phone:LongListSelector.ItemTemplate>
                 </phone:LongListSelector>
             </phone:PivotItem>
+
+            <!--Pivot item four-->
+            <phone:PivotItem Margin="0,5,0,0" Header="{Binding Path=LocalizedResources.More, Source={StaticResource LocalizedStrings}}">
+            </phone:PivotItem>
         </phone:Pivot>
     </Grid>
 
