group summary on main page

--- a/Split_It/App.xaml
+++ b/Split_It/App.xaml
@@ -75,6 +75,7 @@
         <sys:Double x:Key="expenseTitleSize">25</sys:Double>
         <sys:Double x:Key="amountSize">29</sys:Double>
         <sys:Double x:Key="descriptionSize">20</sys:Double>
+        <sys:Double x:Key="groupTimeSize">18</sys:Double>
 
         <sys:Double x:Key="userDetailnameSize">29</sys:Double>
         <sys:Double x:Key="userDetaildescriptionSize">26</sys:Double>
